<resources>
    <string name="app_name">module-main</string>
    <string name="title">Title</string>
    <string name="me">我</string>
    <string name="wsdydeniya">无伤大雅的你呀</string>
    <string name="my_favorites">我的收藏</string>
    <string name="setting">设置</string>
    <string name="dark_mode">深色模式</string>
    <string name="my_share">我的分享</string>
    <string name="read_after">稍后阅读</string>
    <string name="recommend_items">推荐项目</string>
    <string name="Relax">放松时刻</string>
    <string name="word_of_day">每日一语</string>
    <string name="about_us">关于我们</string>
    <string name="follow_system">跟随系统</string>
    <string name="follow_system_text">开启后，将跟随系统打开或关闭深色模式</string>
    <string name="manual_selection">手动选择</string>
    <string name="normal_mode">普通模式</string>
    <string name="complete">完成</string>
</resources>