<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_di"
    tools:context=".ui.me.DarkModeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/darkMode_toolbar"
        android:background="@color/background"
        android:elevation="4sp"
        app:title="@string/dark_mode"
        app:menu="@menu/mode_menu"
        app:navigationIcon="@drawable/ic_detail_left_arrow"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/follow_system_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/background"
        app:layout_constraintTop_toBottomOf="@id/darkMode_toolbar">

        <TextView
            android:id="@+id/follow_text"
            android:textSize="18sp"
            android:textColor="@color/text_black"
            android:layout_marginTop="20sp"
            android:text="@string/follow_system"
            android:layout_marginStart="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:textSize="16sp"
            android:text="@string/follow_system_text"
            android:layout_marginBottom="20sp"
            android:layout_marginStart="20sp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkMode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20sp"
            android:theme="@style/AppTheme"
            android:longClickable="false"
            android:layout_alignTop="@id/follow_text" />

    </RelativeLayout>

    <TextView
        android:text="@string/manual_selection"
        android:textSize="16sp"
        android:id="@+id/manual_text"
        android:textColor="@color/text_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/follow_system_layout"/>

    <RelativeLayout
        android:id="@+id/normal_mode_layout"
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background"
        app:layout_constraintDimensionRatio="w,1:10"
        app:layout_constraintTop_toBottomOf="@id/manual_text">

        <TextView
            android:textSize="16sp"
            android:text="@string/normal_mode"
            android:layout_marginStart="20sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/normal_mode_image"
            android:src="@drawable/ic_choose_mode"
            android:layout_marginEnd="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="24sp"
            android:layout_height="24sp"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dark_mode_layout"
        android:layout_marginTop="1sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background"
        app:layout_constraintDimensionRatio="w,1:10"
        app:layout_constraintTop_toBottomOf="@id/normal_mode_layout">

        <TextView
            android:textSize="16sp"
            android:text="@string/dark_mode"
            android:layout_marginStart="20sp"
            android:layout_centerVertical="true"
            android:textColor="@color/text_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/dark_mode_image"
            android:src="@drawable/ic_choose_mode"
            android:layout_marginEnd="20sp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_width="24sp"
            android:layout_height="24sp"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/manual_group"
        android:visibility="gone"
        app:constraint_referenced_ids="manual_text,normal_mode_layout,dark_mode_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>

