<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.wsdydeni.module_main.ui.me.MeViewModel" />
        <variable
            name="app"
            type="com.wsdydeni.library_base.base.AppViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_di">

        <TextView
            android:id="@+id/me_header"
            android:elevation="4sp"
            android:text="@string/me"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/me_profile_layout"
            android:elevation="4sp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10sp"
            android:background="@color/background"
            app:layout_constraintDimensionRatio="w,1:4"
            app:layout_constraintTop_toBottomOf="@id/me_header">

            <RelativeLayout
                android:visibility="@{app.loginState ? View.VISIBLE : View.GONE}"
                android:id="@+id/me_profile_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/me_avatar"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/me_background"/>

                <TextView
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/text_black"
                    android:layout_marginStart="20sp"
                    android:text="@{viewModel.user.publicName}"
                    android:layout_toEndOf="@id/me_avatar"
                    android:layout_toStartOf="@id/me_profile_right"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/me_profile_right"
                    android:layout_marginEnd="20sp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_setting_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/me_go_login_layout"
                android:visibility="@{app.loginState ? View.GONE : View.VISIBLE }"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/login_or_sign"
                    android:textSize="26sp"
                    android:textColor="@color/text_black"
                    android:layout_marginStart="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/me_favorites_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintVertical_bias="0.02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_favorites_image"
                android:src="@drawable/ic_favorites"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_favorites_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_favorites"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_share_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintVertical_bias="0.14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_share_image"
                android:src="@drawable/ic_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_share_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_share"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_read_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintVertical_bias="0.26"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_read_image"
                android:src="@drawable/ic_read"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_read_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_after"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_recommend_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintVertical_bias="0.38"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_recommend_image"
                android:src="@drawable/ic_github"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_recommend_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_items"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_listing_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout"
            app:layout_constraintVertical_bias="0.5"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/me_listing_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20sp"
                android:src="@drawable/ic_listing"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_listing_image"
                android:text="@string/Relax"
                android:textColor="@color/text_black"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_word_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintVertical_bias="0.62"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_word_image"
                android:src="@drawable/ic_word"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_word_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_of_day"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_about_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.076"
            app:layout_constraintVertical_bias="0.752"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_about_image"
                android:src="@drawable/ic_about"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_about_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_dayNight_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.076"
            app:layout_constraintVertical_bias="0.866"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_dayNight_image"
                android:src="@drawable/ic_dark_mode"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_dayNight_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/me_setting_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintHeight_percent="0.076"
            app:layout_constraintVertical_bias="0.98"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/me_profile_layout">

            <ImageView
                android:id="@+id/me_setting_image"
                android:src="@drawable/ic_setting"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20sp"
                android:layout_centerVertical="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:textSize="18sp"
                android:layout_marginStart="20sp"
                android:layout_toEndOf="@id/me_setting_image"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>